--- a/common_challenge/index.html
+++ b/common_challenge/index.html
@@ -101,6 +101,8 @@
         </section>
       </div>
     </main>
-    <footer></footer>
+    <footer>
+      <h1>Test</h1>
+    </footer>
   </body>
 </html>
