Main content adjusted for phone media querys min 320px max 480px

--- a/common_challenge/index.html
+++ b/common_challenge/index.html
@@ -40,10 +40,9 @@
                   That may be true.
                 </h1>
                 <p>
-                  Check who's following to succesfully remove them from your
-                  life.
+                 Find out who's using what kind of information from you.
                 </p>
-                <button class="join-button">Get started</button>
+                <button class="join-button" id="get-started-button">Get started</button>
               </div>
             </div>
           </article>
@@ -99,10 +98,12 @@
             </template>
           </div>
         </section>
+        <!-- <section class="appInformationContainer">
+
+        </section> -->
       </div>
     </main>
     <footer>
-      <h1>Test</h1>
     </footer>
   </body>
 </html>
