Changed the result cards and added open and close function to the modal that will contain app information in the end

--- a/common_challenge/index.html
+++ b/common_challenge/index.html
@@ -4,16 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;800&display=swap"
-      rel="stylesheet" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter&display=swap"
-      rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
     <title>Document</title>
@@ -21,7 +14,7 @@
   <body>
     <header>
       <nav>
-        <ul>
+        <ul id="nav-ul">
           <li>FAQ</li>
           <li>About us</li>
           <li><button class="join-button">Join now</button></li>
@@ -63,44 +56,53 @@
             </span>
             <div class="options-wrapper">
               <div class="option1">
-                <button class="step-btn">Step 1</button>
-                <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa
-                  porro, quis maiores iste officia ipsum culpa aliquam quasi non
-                  possimus deleniti est repellendus enim vel. Ad corrupti
-                  recusandae dicta sed?
-                </p>
-              </div>
+                <p>Step 1</p>
+                  <p>
+                    Search for the app in the search bar below
+                  </p>
+                </div>
               <div class="option2">
-                <button class="step-btn">Step 2</button>
-                <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa
-                  porro, quis maiores iste officia ipsum culpa aliquam quasi non
-                  possimus deleniti est repellendus enim vel. Ad corrupti
-                  recusandae dicta sed?
-                </p>
+                <p>Step 2</p>
+                  <p>
+                    Select the app and see what they are doing with your data
+                  </p>
+                </div>
               </div>
             </div>
-          </div>
         </section>
+
         <section id="find-your-app">
           <div class="search-wrapper">
             <label for="search">Search application</label>
-            <input type="search" id="search" data-search />
+            <input type="search" id="search" data-search placeholder="ex: Snapchat"/>
           </div>
           <div class="user-cards" data-user-cards-container>
             <template data-user-template>
               <div class="card">
-                <div class="header" data-header></div>
-                <div class="body" data-body></div>
                 <img class="imageFit" data-img></img>
+                <div class="header" data-header></div>
               </div>
             </template>
           </div>
-        </section>
-        <!-- <section class="appInformationContainer">
 
-        </section> -->
+          <section class="appInformationContainer">
+            <article class="infoWrapper">
+              <div id="close-container">
+                <div class="close-btn-container">
+                  <button class="close-btn">X</button>
+                </div>
+              </div>
+              <figure id="image-figure">
+                <img src="images/app-logos/facebook.png" alt="Facebook app logo" id="app-logo">
+                <figcaption id="fig-caption"></figcaption>
+              </figure>
+              <ul id="app-info-titles">
+                <li id="app-form"><p id="form-content"></p></li>
+              </ul>
+            </article>
+          </section>
+        </section>
+
       </div>
     </main>
     <footer>
