latest version, need to add the content function after

--- a/common_challenge/index.html
+++ b/common_challenge/index.html
@@ -93,7 +93,7 @@
                 </div>
               </div>
               <figure id="image-figure">
-                <img src="images/app-logos/facebook.png" alt="Facebook app logo" id="app-logo">
+                <img src="" alt="app logo" id="app-logo">
                 <figcaption id="fig-caption"></figcaption>
               </figure>
               <ul id="app-info-titles">
