added the corrensponding app information based on id's, filtered the 2 arrays and changed the content based on the targets values

--- a/common_challenge/index.html
+++ b/common_challenge/index.html
@@ -15,8 +15,8 @@
     <header>
       <nav>
         <ul id="nav-ul">
-          <li>FAQ</li>
-          <li>About us</li>
+          <li><a href="">FAQ</a></li>
+          <li><a href="">About us</a></li>
           <li><button class="join-button">Join now</button></li>
         </ul>
       </nav>
@@ -95,11 +95,13 @@
             </div>
             <article class="infoWrapper" data-app-information-container>
               <div class="container">
-                <img src="images/app-logos/facebook.png" alt="" data-info-img>    
-                <p data-info-title>Facebook</p>
+                    
+       
                 <div class="data-container">
-                  <p data-info-body>
-                    <ul>
+                  <img src="" alt="" data-info-logo>
+                  <p data-info-title></p>
+                  <p data-info-body></p>
+                    <!-- <ul>
                       <li>Activiteit en gegevens die je verstrekt:</li>
                       <ul>
                         <li>Werkt dit zo?</li>
@@ -119,8 +121,7 @@
                           <li>Werkt dit zo?</li>
                         </ul>
                       </li>
-                    </ul>
-                  </p>
+                    </ul> -->
                 </div>
 
               </div>
