--- a/common_challenge/index.html
+++ b/common_challenge/index.html
@@ -98,30 +98,9 @@
                     
        
                 <div class="data-container">
-                  <img src="" alt="" data-info-logo>
+                  <img src="" alt="" data-info-logo style="width: 20%;">
                   <p data-info-title></p>
                   <p data-info-body></p>
-                    <!-- <ul>
-                      <li>Activiteit en gegevens die je verstrekt:</li>
-                      <ul>
-                        <li>Werkt dit zo?</li>
-                      </ul>
-                      <li>Vrienden, volgers en andere connecties:
-                        <ul>
-                          <li>Werkt dit zo?</li>
-                        </ul>
-                      </li>
-                      <li>Informatie over de app, browser en het apparaat:
-                        <ul>
-                          <li>Werkt dit zo?</li>
-                        </ul>
-                      </li>
-                      <li>Informatie van Partners, leveranciers en derde:
-                        <ul>
-                          <li>Werkt dit zo?</li>
-                        </ul>
-                      </li>
-                    </ul> -->
                 </div>
 
               </div>
